--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^15.2.4",
     "next-images": "^1.8.5",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.37.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
@@ -39,6 +40,7 @@
     "swiper": "^11.2.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1",
     "typescript": "^4.9.5",
     "vaul": "^1.1.2",
     "web-vitals": "^2.1.4"
@@ -70,6 +72,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/three": "^0.175.0",
     "daisyui": "^5.0.12"
   }
 }
