--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -20,12 +20,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.486.0",
     "motion": "^12.6.2",
     "next": "^15.2.4",
@@ -35,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.6",
