--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.5",
+    "@tanstack/react-virtual": "^3.13.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
